--- a/setup.yml
+++ b/setup.yml
@@ -1,6 +1,6 @@
 ---
 - hosts: ceph
-  sudo: False
+  sudo: True
 
   vars:
     proxy_env:
@@ -13,5 +13,16 @@
       with_items:
         - git
         - etckeeper
-      sudo: True
+      environment: "{{ proxy_env }}"
+
+    - name: get ceph release key
+      apt_key: id=17ED316D url=https://raw.github.com/ceph/ceph/master/keys/release.asc state=present
+      environment: "{{ proxy_env }}"
+
+    - name: Add the BOBTAIL repo
+      apt_repository: repo='deb http://eu.ceph.com/debian-bobtail/ $(lsb_release -sc) main' state=present
+      environment: "{{ proxy_env }}"
+
+    - name: Install CEPH
+      apt: pkg=ceph state=latest update-cache=yes
       environment: "{{ proxy_env }}"
