--- a/templates/rgw.conf
+++ b/templates/rgw.conf
@@ -14,4 +14,8 @@ FastCgiExternalServer /var/www/s3gw.fcgi -socket /tmp/radosgw.sock
                         AuthBasicAuthoritative Off
                 </Directory>
         </IfModule>
+
+        RewriteEngine On
+        RewriteRule ^/([a-zA-Z0-9-_.]*)([/]?.*) /s3gw.fcgi?page=$1&params=$2&%{QUERY_STRING} [E=HTTP_AUTHORIZATION:%{HTTP:Authorization},L]
+
 </VirtualHost>
