use fqdn in places to get radosgw to start

--- a/templates/rgw.conf
+++ b/templates/rgw.conf
@@ -1,7 +1,7 @@
 FastCgiExternalServer /var/www/s3gw.fcgi -socket /tmp/radosgw.sock
 <VirtualHost *:80>
         ServerName {{ ansible_hostname }}
-        ServerAdmin {{ email_address }}@{{ ansible_hostname }}
+        ServerAdmin {{ email_address }}@{{ ansible_fqdn }}
         DocumentRoot /var/www
 
         <IfModule mod_fastcgi.c>
