--- a/setup.yml
+++ b/setup.yml
@@ -14,7 +14,7 @@
     mds_fqdn_a: ${ansible_default_ipv4.address}
     osd_fqdn_0: ${ansible_default_ipv4.address}
     osd_fqdn_1: ${ansible_default_ipv4.address}
-    radosgw_hostname: ${ansible_hostname}
+    radosgw_hostname: ${ansible_fqdn}
     email_address: nops
 
   tasks:
@@ -154,6 +154,9 @@
       command: a2dissite default
       notify:
         - restart apache2
+
+    - name: start radosgw
+      command: /etc/init.d/radosgw start
 
     - name: create a user in radosgw
       command: radosgw-admin user create --uid=johndoe --display-name="John Doe" --email=john@example.com
