--- a/setup.yml
+++ b/setup.yml
@@ -25,6 +25,7 @@
         - python-virtualenv
         - python-apt
       environment:
+        http_proxy: http://134.226.112.43:8080
         https_proxy: http://134.226.112.43:8080
 
     ## install ceph from upstream repos
