--- a/templates/ceph-radosgw-fragment.conf
+++ b/templates/ceph-radosgw-fragment.conf
@@ -3,4 +3,5 @@ host = {{ansible_fqdn}}
 keyring = /etc/ceph/keyring.radosgw.gateway
 rgw socket path = /tmp/radosgw.sock
 log file = /var/log/ceph/radosgw.log
-rgw remote addr = dri-guest004.tchpc.tcd.ie
+rgw remote addr = {{ hostvars[groups['radosgw-lb'][0]]['ansible_fqdn'] }}
+rgw dns name = {{ hostvars[groups['radosgw-lb'][0]]['ansible_hostname'] }}
