expose stats on port 8080 to local network

--- a/templates/haproxy/haproxy.cfg
+++ b/templates/haproxy/haproxy.cfg
@@ -47,3 +47,11 @@ backend web_server
 {% for host in groups['radosgw'] %}
 	server {{ hostvars[host].ansible_hostname }} {{ hostvars[host]['ansible_' + iface].ipv4.address }}:80 check cookie {{ hostvars[host].ansible_hostname }}
 {% endfor %}
+
+listen stats :8080
+mode http
+stats enable
+stats hide-version
+stats realm Haproxy\ Statistics
+stats uri /
+#stats auth Username:Password
