--- a/templates/rgw.conf
+++ b/templates/rgw.conf
@@ -2,6 +2,7 @@ FastCgiExternalServer /var/www/s3gw.fcgi -socket /tmp/radosgw.sock
 <VirtualHost *:80>
         ServerName {{ ansible_hostname }}
         ServerAdmin root@{{ ansible_fqdn }}
+        ServerAlias *.{{ hostvars[groups['radosgw-lb'][0]].ansible_fqdn }}
         DocumentRoot /var/www
 
         <IfModule mod_fastcgi.c>
