--- a/templates/rgw.conf
+++ b/templates/rgw.conf
@@ -18,5 +18,8 @@ FastCgiExternalServer /var/www/s3gw.fcgi -socket /tmp/radosgw.sock
 
         RewriteEngine On
         RewriteRule ^/([a-zA-Z0-9-_.]*)([/]?.*) /s3gw.fcgi?page=$1&params=$2&%{QUERY_STRING} [E=HTTP_AUTHORIZATION:%{HTTP:Authorization},L]
-
+        AllowEncodedSlashes On
+#        ErrorLog /var/log/apache2/error.log
+#        CustomLog /var/log/apache2/access.log combined
+        ServerSignature Off
 </VirtualHost>
