--- a/site.yml
+++ b/site.yml
@@ -45,6 +45,7 @@
       apt: name=$item state=present update_cache=yes
       with_items:
         - ceph
+        - ceph-deploy
         - radosgw
         - apache2
         - libapache2-mod-fastcgi
