--- a/hacking/Vagrantfile
+++ b/hacking/Vagrantfile
@@ -1,34 +1,30 @@
 # -*- mode: ruby -*-
 # vi: set ft=ruby :
 
-Vagrant::Config.run do |global_config|
-  # All Vagrant configuration is done here. The most common configuration
-  # options are documented and commented below. For a complete reference,
-  # please see the online documentation at vagrantup.com.
+Vagrant.configure("2") do |config|
+  #config.vm.box = "sl64-x86_64"
+  #config.vm.box_url = "http://objects.tchpc.tcd.ie/baseboxes/scientificlinux-6.2-x86_64-netboot.box"
+  config.vm.box = "precise64"
+  config.vm.box_url = "http://objects.tchpc.tcd.ie/baseboxes/precise.box"
 
-  global_config.vm.box = "precise64"
-  global_config.vm.box_url = "http://thammuz.tchpc.tcd.ie/mirrors/boxes/precise64.box"
+  config.vm.provider :virtualbox do |vb|
+    vb.customize ["modifyvm", :id, "--nictype1", "virtio"]
+    vb.customize ["modifyvm", :id, "--nictype2", "virtio"]
+    vb.customize ["modifyvm", :id, "--nictype3", "virtio"]
+  end
 
-  global_config.vm.define(:ceph) do |config|
-    config.vm.network :hostonly, "192.168.206.110"
-    config.vm.host_name = "ceph.localhost"
-
-#    config.vm.provision :ansible do |ansible|
-#      # point Vagrant at the location of your playbook you want to run
-#      ansible.playbook =  [ "playbooks/setup.yml" ]
-#
-#      # the Vagrant VM will be put in this host group change this should
-#      # match the host group in your playbook you want to test
-#      ansible.hosts = [ "ceph" ]
-#    end
-
-    config.vm.customize [
-      "modifyvm", :id,
-      "--name", "ceph VM",
-      "--memory", "1024",
-    ]
-    config.vm.customize [ "createhd", "--filename", "disk-1", "--size", "5000" ]
-    config.vm.customize [ "storageattach", :id, "--storagectl", "SATA Controller", "--port", 3+1, "--device", 0, "--type", "hdd", "--medium", "disk-1.vdi" ]
+  (0..2).each do |i|
+    config.vm.define "node#{i}" do |node|
+      node.vm.hostname = "node#{i}.test"
+      node.vm.network :private_network, ip: "192.168.251.10#{i}"
+      node.vm.network :private_network, ip: "192.168.252.10#{i}"
+      (0..1).each do |d|
+        node.vm.provider :virtualbox do |vb|
+          vb.customize [ "createhd", "--filename", "disk-#{i}-#{d}", "--size", "1000" ]
+          vb.customize [ "storageattach", :id, "--storagectl", "SATA Controller", "--port", 3+d, "--device", 0, "--type", "hdd", "--medium", "disk-#{i}-#{d}.vdi" ]
+        end
+      end
+    end
   end
 
 end
