respond with objects.dri.ie in radosgw

--- a/templates/ceph-radosgw-fragment.conf
+++ b/templates/ceph-radosgw-fragment.conf
@@ -3,5 +3,6 @@ host = {{ansible_fqdn}}
 keyring = /etc/ceph/keyring.radosgw.gateway
 rgw socket path = /tmp/radosgw.sock
 log file = /var/log/ceph/radosgw.log
-rgw remote addr = {{ hostvars[groups['radosgw-lb'][0]]['ansible_fqdn'] }}
+#rgw remote addr = {{ hostvars[groups['radosgw-lb'][0]]['ansible_fqdn'] }}
+rgw remote addr = {{ hostvars[groups['radosgw-lb'][0]]['ansible_hostname'] }}.dri.ie
 rgw dns name = {{ hostvars[groups['radosgw-lb'][0]]['ansible_hostname'] }}
